@@ -6,8 +6,12 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import org.junit.jupiter.api.Test;
@@ -39,18 +43,13 @@ class LevtusTest {
     // Start server in a virtual thread.
     // Note: Using a fixed port for this simple integration test.
     int port = 9090;
-    Thread serverThread =
-        Thread.ofVirtual()
-            .start(
-                () -> {
-                  app.listen(port);
-                });
+    Thread serverThread = Thread.ofVirtual().start(() -> app.listen(port));
 
     // Give the server a moment to bind to the socket
     Thread.sleep(500);
 
     try {
-      URL url = new URL("http://localhost:" + port + "/test");
+      URL url = new URI("http://localhost:" + port + "/test").toURL();
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       connection.setRequestMethod("GET");
 
@@ -75,7 +74,7 @@ class LevtusTest {
     AtomicBoolean middlewareHit = new AtomicBoolean(false);
 
     app.use(
-        (ctx, next) -> {
+        (_, next) -> {
           middlewareHit.set(true);
           next.run();
         });
@@ -83,20 +82,77 @@ class LevtusTest {
     app.get("/middleware", ctx -> ctx.text("ok"));
 
     int port = 9091;
-    Thread serverThread =
-        Thread.ofVirtual()
-            .start(
-                () -> {
-                  app.listen(port);
-                });
+    Thread serverThread = Thread.ofVirtual().start(() -> app.listen(port));
 
     Thread.sleep(500);
 
     try {
-      URL url = new URL("http://localhost:" + port + "/middleware");
+      URL url = new URI("http://localhost:" + port + "/middleware").toURL();
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       assertEquals(200, connection.getResponseCode());
       assertTrue(middlewareHit.get(), "Middleware should have been executed");
+    } finally {
+      serverThread.interrupt();
+    }
+  }
+
+  @Test
+  void testRouteSpecificMaxBodySizeIntegration() throws Exception {
+    Levtus app = Levtus.create();
+    app.maxBodySize(10); // global limit 10 bytes
+    app.post("/large", ctx -> ctx.text("ok")).limit(100); // route limit 100 bytes
+    app.post("/small", ctx -> ctx.text("ok")).limit(50);
+    app.post("/default", ctx -> ctx.text("ok"));
+
+    int port = 9091;
+    Thread serverThread = Thread.ofVirtual().start(() -> app.listen(port));
+
+    Thread.sleep(500);
+
+    try {
+      // Scenario 1: Sending 20 bytes to /large (Limit is 100) -> Should Pass (200 OK)
+      URL urlLarge = new URI("http://localhost:" + port + "/large").toURL();
+      HttpURLConnection connLarge = (HttpURLConnection) urlLarge.openConnection();
+      connLarge.setRequestMethod("POST");
+      connLarge.setDoOutput(true);
+
+      byte[] body20Bytes = "12345678901234567890".getBytes(StandardCharsets.UTF_8);
+      try (OutputStream os = connLarge.getOutputStream()) {
+        os.write(body20Bytes);
+      }
+      assertEquals(
+          200, connLarge.getResponseCode(), "Should allow 20 bytes on a 100-byte limit route");
+
+      // Scenario 2: Sending 60 bytes to /small (Limit is 50) -> Should Fail (e.g., 413 Payload Too
+      // Large)
+      URL urlSmall = new URI("http://localhost:" + port + "/small").toURL();
+      HttpURLConnection connSmall = (HttpURLConnection) urlSmall.openConnection();
+      connSmall.setRequestMethod("POST");
+      connSmall.setDoOutput(true);
+
+      byte[] body60Bytes = "A".repeat(60).getBytes(StandardCharsets.UTF_8);
+      try (OutputStream os = connSmall.getOutputStream()) {
+        os.write(body60Bytes);
+      }
+      // Adjust the expected status code (413) based on what your Levtus framework returns
+      assertEquals(
+          413, connSmall.getResponseCode(), "Should block 60 bytes on a 50-byte limit route");
+
+      // Scenario 3: Sending 15 bytes to /default (Fallback to global limit 10) -> Should Fail (413)
+      URL urlDefault = new URI("http://localhost:" + port + "/default").toURL();
+      HttpURLConnection connDefault = (HttpURLConnection) urlDefault.openConnection();
+      connDefault.setRequestMethod("POST");
+      connDefault.setDoOutput(true);
+
+      byte[] body15Bytes = "123456789012345".getBytes(StandardCharsets.UTF_8);
+      try (OutputStream os = connDefault.getOutputStream()) {
+        os.write(body15Bytes);
+      }
+      assertEquals(
+          413,
+          connDefault.getResponseCode(),
+          "Should block 15 bytes on a 10-byte global limit route");
+
     } finally {
       serverThread.interrupt();
     }
@@ -112,6 +168,63 @@ class LevtusTest {
         .maxHeaderSize(4096)
         .maxLineSize(4096)
         .maxEmptyLines(3)
-        .staticFiles("public");
+        .staticFiles("public")
+        .initialSocketTimeout(5000)
+        .processingSocketTimeout(20000);
+  }
+
+  @Test
+  void testFluentLimitBodySize() {
+    Levtus app = Levtus.create();
+
+    assertEquals(200, app.post("/", ctx -> ctx.text("ok")).limit(200).getMaxBodySize());
+  }
+
+  @Test
+  void test100Continue() throws Exception {
+    Levtus app = Levtus.create();
+    app.post("/test", ctx -> ctx.text("ok")).limit(100);
+
+    int port = 9093;
+    Thread serverThread = Thread.ofVirtual().start(() -> app.listen(port));
+
+    Thread.sleep(500);
+
+    try (Socket socket = new Socket("localhost", port);
+        OutputStream out = socket.getOutputStream();
+        BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()))) {
+
+      // Test valid 100-continue
+      String request =
+          "POST /test HTTP/1.1\r\n"
+              + "Host: localhost:"
+              + port
+              + "\r\n"
+              + "Expect: 100-continue\r\n"
+              + "Content-Length: 11\r\n"
+              + "\r\n";
+
+      out.write(request.getBytes(StandardCharsets.UTF_8));
+      out.flush();
+
+      // Read 100 Continue response
+      String line = in.readLine();
+      assertTrue(line.contains("100"), "Should receive 100 Continue");
+
+      while (!in.readLine().isEmpty()) {
+        // Skip headers
+      }
+
+      // Send body
+      out.write("Hello World".getBytes(StandardCharsets.UTF_8));
+      out.flush();
+
+      // Read final response
+      line = in.readLine();
+      System.out.println("Actual response line: " + line); // Debug
+      assertTrue(line.contains("200"), "Should receive 200 OK");
+    } finally {
+      serverThread.interrupt();
+    }
   }
 }
